// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search component should render with icons 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Array [
            Object {
              "backgroundColor": "#393e42",
              "borderBottomColor": "#000",
              "borderBottomWidth": 1,
              "borderTopColor": "#000",
              "borderTopWidth": 1,
            },
            Object {
              "backgroundColor": "#e1e8ee",
              "borderBottomColor": "#e1e1e1",
              "borderTopColor": "#e1e1e1",
            },
            Object {
              "height": 70,
            },
          ]
    }
>
    <TextInput
        autoCapitalize={undefined}
        autoCorrect={undefined}
        autoFocus={undefined}
        blurOnSubmit={undefined}
        clear={undefined}
        clearButtonMode={undefined}
        clearTextOnFocus={undefined}
        dataDetectorTypes={undefined}
        defaultValue={undefined}
        editable={undefined}
        enablesReturnKeyAutomatically={undefined}
        inlineImageLeft={undefined}
        inlineImagePadding={undefined}
        isFocused={undefined}
        keyboardAppearance={undefined}
        keyboardType={undefined}
        maxLength={undefined}
        multiline={undefined}
        numberOfLines={undefined}
        onBlur={undefined}
        onChange={undefined}
        onChangeText={undefined}
        onContentSizeChange={undefined}
        onEndEditing={undefined}
        onFocus={undefined}
        onKeyPress={undefined}
        onLayout={undefined}
        onSelectionChange={undefined}
        onSubmitEditing={undefined}
        placeholder={undefined}
        placeholderTextColor="#86939e"
        returnKeyLabel={undefined}
        returnKeyType={undefined}
        secureTextEntry={undefined}
        selectTextOnFocus={undefined}
        selectionColor="#86939e"
        selectionState={undefined}
        style={
            Array [
                Object {
                  "backgroundColor": "#303337",
                  "borderRadius": 3,
                  "color": "#86939e",
                  "fontSize": 17.5,
                  "height": 30,
                  "margin": 8,
                  "overflow": "hidden",
                  "paddingLeft": 26,
                  "paddingRight": 19,
                },
                Object {
                  "backgroundColor": "#bdc6cf",
                },
                false,
                false,
                undefined,
              ]
        }
        underlineColorAndroid="transparent"
        value={undefined}
    />
    <Icon
        allowFontScaling={false}
        color="#86939e"
        name="search"
        size={16}
        style={
            Array [
                Object {
                  "backgroundColor": "transparent",
                  "left": 16,
                  "position": "absolute",
                  "top": 15.5,
                },
                undefined,
              ]
        }
    />
    <Icon
        allowFontScaling={false}
        color="red"
        name="3d-rotation"
        onPress={[Function]}
        size={16}
        style={
            Array [
                Object {
                  "backgroundColor": "transparent",
                  "position": "absolute",
                  "right": 16,
                  "top": 15.5,
                },
                undefined,
              ]
        }
    />
    <ActivityIndicator
        animating={true}
        color="#86939e"
        hidesWhenStopped={true}
        size="small"
        style={
            Array [
                Object {
                  "backgroundColor": "transparent",
                  "position": "absolute",
                  "right": 16,
                  "top": 13,
                },
                Object {
                  "flex": 1,
                },
              ]
        }
    />
</View>,
  "nodes": Array [
    <View
      style={
            Array [
                  Object {
                    "backgroundColor": "#393e42",
                    "borderBottomColor": "#000",
                    "borderBottomWidth": 1,
                    "borderTopColor": "#000",
                    "borderTopWidth": 1,
                  },
                  Object {
                    "backgroundColor": "#e1e8ee",
                    "borderBottomColor": "#e1e1e1",
                    "borderTopColor": "#e1e1e1",
                  },
                  Object {
                    "height": 70,
                  },
                ]
      }
>
      <TextInput
            autoCapitalize={undefined}
            autoCorrect={undefined}
            autoFocus={undefined}
            blurOnSubmit={undefined}
            clear={undefined}
            clearButtonMode={undefined}
            clearTextOnFocus={undefined}
            dataDetectorTypes={undefined}
            defaultValue={undefined}
            editable={undefined}
            enablesReturnKeyAutomatically={undefined}
            inlineImageLeft={undefined}
            inlineImagePadding={undefined}
            isFocused={undefined}
            keyboardAppearance={undefined}
            keyboardType={undefined}
            maxLength={undefined}
            multiline={undefined}
            numberOfLines={undefined}
            onBlur={undefined}
            onChange={undefined}
            onChangeText={undefined}
            onContentSizeChange={undefined}
            onEndEditing={undefined}
            onFocus={undefined}
            onKeyPress={undefined}
            onLayout={undefined}
            onSelectionChange={undefined}
            onSubmitEditing={undefined}
            placeholder={undefined}
            placeholderTextColor="#86939e"
            returnKeyLabel={undefined}
            returnKeyType={undefined}
            secureTextEntry={undefined}
            selectTextOnFocus={undefined}
            selectionColor="#86939e"
            selectionState={undefined}
            style={
                  Array [
                        Object {
                          "backgroundColor": "#303337",
                          "borderRadius": 3,
                          "color": "#86939e",
                          "fontSize": 17.5,
                          "height": 30,
                          "margin": 8,
                          "overflow": "hidden",
                          "paddingLeft": 26,
                          "paddingRight": 19,
                        },
                        Object {
                          "backgroundColor": "#bdc6cf",
                        },
                        false,
                        false,
                        undefined,
                      ]
            }
            underlineColorAndroid="transparent"
            value={undefined}
      />
      <Icon
            allowFontScaling={false}
            color="#86939e"
            name="search"
            size={16}
            style={
                  Array [
                        Object {
                          "backgroundColor": "transparent",
                          "left": 16,
                          "position": "absolute",
                          "top": 15.5,
                        },
                        undefined,
                      ]
            }
      />
      <Icon
            allowFontScaling={false}
            color="red"
            name="3d-rotation"
            onPress={[Function]}
            size={16}
            style={
                  Array [
                        Object {
                          "backgroundColor": "transparent",
                          "position": "absolute",
                          "right": 16,
                          "top": 15.5,
                        },
                        undefined,
                      ]
            }
      />
      <ActivityIndicator
            animating={true}
            color="#86939e"
            hidesWhenStopped={true}
            size="small"
            style={
                  Array [
                        Object {
                          "backgroundColor": "transparent",
                          "position": "absolute",
                          "right": 16,
                          "top": 13,
                        },
                        Object {
                          "flex": 1,
                        },
                      ]
            }
      />
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Search
        clearIcon={
                Object {
                        "color": "red",
                        "name": "3d-rotation",
                      }
        }
        containerStyle={
                Object {
                        "height": 70,
                      }
        }
        icon={Object {}}
        lightTheme={true}
        loadingIcon={
                Object {
                        "style": Object {
                          "flex": 1,
                        },
                      }
        }
        noIcon={false}
        placeholderTextColor="#86939e"
        round={false}
        showLoadingIcon={true}
        style={
                Object {
                        "containerLight": Object {
                          "height": 70,
                        },
                      }
        }
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Search {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "clearIcon": Object {
            "color": "red",
            "name": "3d-rotation",
          },
          "containerStyle": Object {
            "height": 70,
          },
          "icon": Object {},
          "lightTheme": true,
          "loadingIcon": Object {
            "style": Object {
              "flex": 1,
            },
          },
          "noIcon": false,
          "placeholderTextColor": "#86939e",
          "round": false,
          "showLoadingIcon": true,
          "style": Object {
            "containerLight": Object {
              "height": 70,
            },
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "#393e42",
                                "borderBottomColor": "#000",
                                "borderBottomWidth": 1,
                                "borderTopColor": "#000",
                                "borderTopWidth": 1,
                              },
                              Object {
                                "backgroundColor": "#e1e8ee",
                                "borderBottomColor": "#e1e1e1",
                                "borderTopColor": "#e1e1e1",
                              },
                              Object {
                                "height": 70,
                              },
                            ]
          }
>
          <TextInput
                    autoCapitalize={undefined}
                    autoCorrect={undefined}
                    autoFocus={undefined}
                    blurOnSubmit={undefined}
                    clear={undefined}
                    clearButtonMode={undefined}
                    clearTextOnFocus={undefined}
                    dataDetectorTypes={undefined}
                    defaultValue={undefined}
                    editable={undefined}
                    enablesReturnKeyAutomatically={undefined}
                    inlineImageLeft={undefined}
                    inlineImagePadding={undefined}
                    isFocused={undefined}
                    keyboardAppearance={undefined}
                    keyboardType={undefined}
                    maxLength={undefined}
                    multiline={undefined}
                    numberOfLines={undefined}
                    onBlur={undefined}
                    onChange={undefined}
                    onChangeText={undefined}
                    onContentSizeChange={undefined}
                    onEndEditing={undefined}
                    onFocus={undefined}
                    onKeyPress={undefined}
                    onLayout={undefined}
                    onSelectionChange={undefined}
                    onSubmitEditing={undefined}
                    placeholder={undefined}
                    placeholderTextColor="#86939e"
                    returnKeyLabel={undefined}
                    returnKeyType={undefined}
                    secureTextEntry={undefined}
                    selectTextOnFocus={undefined}
                    selectionColor="#86939e"
                    selectionState={undefined}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "#303337",
                                          "borderRadius": 3,
                                          "color": "#86939e",
                                          "fontSize": 17.5,
                                          "height": 30,
                                          "margin": 8,
                                          "overflow": "hidden",
                                          "paddingLeft": 26,
                                          "paddingRight": 19,
                                        },
                                        Object {
                                          "backgroundColor": "#bdc6cf",
                                        },
                                        false,
                                        false,
                                        undefined,
                                      ]
                    }
                    underlineColorAndroid="transparent"
                    value={undefined}
          />
          <Icon
                    allowFontScaling={false}
                    color="#86939e"
                    name="search"
                    size={16}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "left": 16,
                                          "position": "absolute",
                                          "top": 15.5,
                                        },
                                        undefined,
                                      ]
                    }
          />
          <Icon
                    allowFontScaling={false}
                    color="red"
                    name="3d-rotation"
                    onPress={[Function]}
                    size={16}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "position": "absolute",
                                          "right": 16,
                                          "top": 15.5,
                                        },
                                        undefined,
                                      ]
                    }
          />
          <ActivityIndicator
                    animating={true}
                    color="#86939e"
                    hidesWhenStopped={true}
                    size="small"
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "position": "absolute",
                                          "right": 16,
                                          "top": 13,
                                        },
                                        Object {
                                          "flex": 1,
                                        },
                                      ]
                    }
          />
</View>,
        "_debugID": 4,
        "_renderedOutput": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "#393e42",
                                "borderBottomColor": "#000",
                                "borderBottomWidth": 1,
                                "borderTopColor": "#000",
                                "borderTopWidth": 1,
                              },
                              Object {
                                "backgroundColor": "#e1e8ee",
                                "borderBottomColor": "#e1e1e1",
                                "borderTopColor": "#e1e1e1",
                              },
                              Object {
                                "height": 70,
                              },
                            ]
          }
>
          <TextInput
                    autoCapitalize={undefined}
                    autoCorrect={undefined}
                    autoFocus={undefined}
                    blurOnSubmit={undefined}
                    clear={undefined}
                    clearButtonMode={undefined}
                    clearTextOnFocus={undefined}
                    dataDetectorTypes={undefined}
                    defaultValue={undefined}
                    editable={undefined}
                    enablesReturnKeyAutomatically={undefined}
                    inlineImageLeft={undefined}
                    inlineImagePadding={undefined}
                    isFocused={undefined}
                    keyboardAppearance={undefined}
                    keyboardType={undefined}
                    maxLength={undefined}
                    multiline={undefined}
                    numberOfLines={undefined}
                    onBlur={undefined}
                    onChange={undefined}
                    onChangeText={undefined}
                    onContentSizeChange={undefined}
                    onEndEditing={undefined}
                    onFocus={undefined}
                    onKeyPress={undefined}
                    onLayout={undefined}
                    onSelectionChange={undefined}
                    onSubmitEditing={undefined}
                    placeholder={undefined}
                    placeholderTextColor="#86939e"
                    returnKeyLabel={undefined}
                    returnKeyType={undefined}
                    secureTextEntry={undefined}
                    selectTextOnFocus={undefined}
                    selectionColor="#86939e"
                    selectionState={undefined}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "#303337",
                                          "borderRadius": 3,
                                          "color": "#86939e",
                                          "fontSize": 17.5,
                                          "height": 30,
                                          "margin": 8,
                                          "overflow": "hidden",
                                          "paddingLeft": 26,
                                          "paddingRight": 19,
                                        },
                                        Object {
                                          "backgroundColor": "#bdc6cf",
                                        },
                                        false,
                                        false,
                                        undefined,
                                      ]
                    }
                    underlineColorAndroid="transparent"
                    value={undefined}
          />
          <Icon
                    allowFontScaling={false}
                    color="#86939e"
                    name="search"
                    size={16}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "left": 16,
                                          "position": "absolute",
                                          "top": 15.5,
                                        },
                                        undefined,
                                      ]
                    }
          />
          <Icon
                    allowFontScaling={false}
                    color="red"
                    name="3d-rotation"
                    onPress={[Function]}
                    size={16}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "position": "absolute",
                                          "right": 16,
                                          "top": 15.5,
                                        },
                                        undefined,
                                      ]
                    }
          />
          <ActivityIndicator
                    animating={true}
                    color="#86939e"
                    hidesWhenStopped={true}
                    size="small"
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "position": "absolute",
                                          "right": 16,
                                          "top": 13,
                                        },
                                        Object {
                                          "flex": 1,
                                        },
                                      ]
                    }
          />
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Search
    clearIcon={
        Object {
            "color": "red",
            "name": "3d-rotation",
          }
    }
    containerStyle={
        Object {
            "height": 70,
          }
    }
    icon={Object {}}
    lightTheme={true}
    loadingIcon={
        Object {
            "style": Object {
              "flex": 1,
            },
          }
    }
    noIcon={false}
    placeholderTextColor="#86939e"
    round={false}
    showLoadingIcon={true}
    style={
        Object {
            "containerLight": Object {
              "height": 70,
            },
          }
    }
/>,
}
`;

exports[`Search component should render without icon 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Array [
            Object {
              "backgroundColor": "#393e42",
              "borderBottomColor": "#000",
              "borderBottomWidth": 1,
              "borderTopColor": "#000",
              "borderTopWidth": 1,
            },
            false,
            undefined,
          ]
    }
>
    <TextInput
        autoCapitalize={undefined}
        autoCorrect={undefined}
        autoFocus={undefined}
        blurOnSubmit={undefined}
        clear={undefined}
        clearButtonMode={undefined}
        clearTextOnFocus={undefined}
        dataDetectorTypes={undefined}
        defaultValue={undefined}
        editable={undefined}
        enablesReturnKeyAutomatically={undefined}
        inlineImageLeft={undefined}
        inlineImagePadding={undefined}
        isFocused={undefined}
        keyboardAppearance={undefined}
        keyboardType={undefined}
        maxLength={undefined}
        multiline={undefined}
        numberOfLines={undefined}
        onBlur={undefined}
        onChange={undefined}
        onChangeText={undefined}
        onContentSizeChange={undefined}
        onEndEditing={undefined}
        onFocus={undefined}
        onKeyPress={undefined}
        onLayout={undefined}
        onSelectionChange={undefined}
        onSubmitEditing={undefined}
        placeholder={undefined}
        placeholderTextColor="#86939e"
        returnKeyLabel={undefined}
        returnKeyType={undefined}
        secureTextEntry={undefined}
        selectTextOnFocus={undefined}
        selectionColor="#86939e"
        selectionState={undefined}
        style={
            Array [
                Object {
                  "backgroundColor": "#303337",
                  "borderRadius": 3,
                  "color": "#86939e",
                  "fontSize": 17.5,
                  "height": 30,
                  "margin": 8,
                  "overflow": "hidden",
                  "paddingLeft": 26,
                  "paddingRight": 19,
                },
                false,
                Object {
                  "paddingLeft": 9,
                },
                Object {
                  "borderRadius": 15,
                },
                undefined,
              ]
        }
        underlineColorAndroid="red"
        value={undefined}
    />
</View>,
  "nodes": Array [
    <View
      style={
            Array [
                  Object {
                    "backgroundColor": "#393e42",
                    "borderBottomColor": "#000",
                    "borderBottomWidth": 1,
                    "borderTopColor": "#000",
                    "borderTopWidth": 1,
                  },
                  false,
                  undefined,
                ]
      }
>
      <TextInput
            autoCapitalize={undefined}
            autoCorrect={undefined}
            autoFocus={undefined}
            blurOnSubmit={undefined}
            clear={undefined}
            clearButtonMode={undefined}
            clearTextOnFocus={undefined}
            dataDetectorTypes={undefined}
            defaultValue={undefined}
            editable={undefined}
            enablesReturnKeyAutomatically={undefined}
            inlineImageLeft={undefined}
            inlineImagePadding={undefined}
            isFocused={undefined}
            keyboardAppearance={undefined}
            keyboardType={undefined}
            maxLength={undefined}
            multiline={undefined}
            numberOfLines={undefined}
            onBlur={undefined}
            onChange={undefined}
            onChangeText={undefined}
            onContentSizeChange={undefined}
            onEndEditing={undefined}
            onFocus={undefined}
            onKeyPress={undefined}
            onLayout={undefined}
            onSelectionChange={undefined}
            onSubmitEditing={undefined}
            placeholder={undefined}
            placeholderTextColor="#86939e"
            returnKeyLabel={undefined}
            returnKeyType={undefined}
            secureTextEntry={undefined}
            selectTextOnFocus={undefined}
            selectionColor="#86939e"
            selectionState={undefined}
            style={
                  Array [
                        Object {
                          "backgroundColor": "#303337",
                          "borderRadius": 3,
                          "color": "#86939e",
                          "fontSize": 17.5,
                          "height": 30,
                          "margin": 8,
                          "overflow": "hidden",
                          "paddingLeft": 26,
                          "paddingRight": 19,
                        },
                        false,
                        Object {
                          "paddingLeft": 9,
                        },
                        Object {
                          "borderRadius": 15,
                        },
                        undefined,
                      ]
            }
            underlineColorAndroid="red"
            value={undefined}
      />
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Search
        icon={Object {}}
        lightTheme={false}
        loadingIcon={Object {}}
        noIcon={true}
        placeholderTextColor="#86939e"
        round={true}
        showLoadingIcon={false}
        underlineColorAndroid="red"
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Search {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "icon": Object {},
          "lightTheme": false,
          "loadingIcon": Object {},
          "noIcon": true,
          "placeholderTextColor": "#86939e",
          "round": true,
          "showLoadingIcon": false,
          "underlineColorAndroid": "red",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "#393e42",
                                "borderBottomColor": "#000",
                                "borderBottomWidth": 1,
                                "borderTopColor": "#000",
                                "borderTopWidth": 1,
                              },
                              false,
                              undefined,
                            ]
          }
>
          <TextInput
                    autoCapitalize={undefined}
                    autoCorrect={undefined}
                    autoFocus={undefined}
                    blurOnSubmit={undefined}
                    clear={undefined}
                    clearButtonMode={undefined}
                    clearTextOnFocus={undefined}
                    dataDetectorTypes={undefined}
                    defaultValue={undefined}
                    editable={undefined}
                    enablesReturnKeyAutomatically={undefined}
                    inlineImageLeft={undefined}
                    inlineImagePadding={undefined}
                    isFocused={undefined}
                    keyboardAppearance={undefined}
                    keyboardType={undefined}
                    maxLength={undefined}
                    multiline={undefined}
                    numberOfLines={undefined}
                    onBlur={undefined}
                    onChange={undefined}
                    onChangeText={undefined}
                    onContentSizeChange={undefined}
                    onEndEditing={undefined}
                    onFocus={undefined}
                    onKeyPress={undefined}
                    onLayout={undefined}
                    onSelectionChange={undefined}
                    onSubmitEditing={undefined}
                    placeholder={undefined}
                    placeholderTextColor="#86939e"
                    returnKeyLabel={undefined}
                    returnKeyType={undefined}
                    secureTextEntry={undefined}
                    selectTextOnFocus={undefined}
                    selectionColor="#86939e"
                    selectionState={undefined}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "#303337",
                                          "borderRadius": 3,
                                          "color": "#86939e",
                                          "fontSize": 17.5,
                                          "height": 30,
                                          "margin": 8,
                                          "overflow": "hidden",
                                          "paddingLeft": 26,
                                          "paddingRight": 19,
                                        },
                                        false,
                                        Object {
                                          "paddingLeft": 9,
                                        },
                                        Object {
                                          "borderRadius": 15,
                                        },
                                        undefined,
                                      ]
                    }
                    underlineColorAndroid="red"
                    value={undefined}
          />
</View>,
        "_debugID": 6,
        "_renderedOutput": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "#393e42",
                                "borderBottomColor": "#000",
                                "borderBottomWidth": 1,
                                "borderTopColor": "#000",
                                "borderTopWidth": 1,
                              },
                              false,
                              undefined,
                            ]
          }
>
          <TextInput
                    autoCapitalize={undefined}
                    autoCorrect={undefined}
                    autoFocus={undefined}
                    blurOnSubmit={undefined}
                    clear={undefined}
                    clearButtonMode={undefined}
                    clearTextOnFocus={undefined}
                    dataDetectorTypes={undefined}
                    defaultValue={undefined}
                    editable={undefined}
                    enablesReturnKeyAutomatically={undefined}
                    inlineImageLeft={undefined}
                    inlineImagePadding={undefined}
                    isFocused={undefined}
                    keyboardAppearance={undefined}
                    keyboardType={undefined}
                    maxLength={undefined}
                    multiline={undefined}
                    numberOfLines={undefined}
                    onBlur={undefined}
                    onChange={undefined}
                    onChangeText={undefined}
                    onContentSizeChange={undefined}
                    onEndEditing={undefined}
                    onFocus={undefined}
                    onKeyPress={undefined}
                    onLayout={undefined}
                    onSelectionChange={undefined}
                    onSubmitEditing={undefined}
                    placeholder={undefined}
                    placeholderTextColor="#86939e"
                    returnKeyLabel={undefined}
                    returnKeyType={undefined}
                    secureTextEntry={undefined}
                    selectTextOnFocus={undefined}
                    selectionColor="#86939e"
                    selectionState={undefined}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "#303337",
                                          "borderRadius": 3,
                                          "color": "#86939e",
                                          "fontSize": 17.5,
                                          "height": 30,
                                          "margin": 8,
                                          "overflow": "hidden",
                                          "paddingLeft": 26,
                                          "paddingRight": 19,
                                        },
                                        false,
                                        Object {
                                          "paddingLeft": 9,
                                        },
                                        Object {
                                          "borderRadius": 15,
                                        },
                                        undefined,
                                      ]
                    }
                    underlineColorAndroid="red"
                    value={undefined}
          />
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Search
    icon={Object {}}
    lightTheme={false}
    loadingIcon={Object {}}
    noIcon={true}
    placeholderTextColor="#86939e"
    round={true}
    showLoadingIcon={false}
    underlineColorAndroid="red"
/>,
}
`;

exports[`Search component should render without issues 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Array [
            Object {
              "backgroundColor": "#393e42",
              "borderBottomColor": "#000",
              "borderBottomWidth": 1,
              "borderTopColor": "#000",
              "borderTopWidth": 1,
            },
            false,
            undefined,
          ]
    }
>
    <TextInput
        autoCapitalize={undefined}
        autoCorrect={undefined}
        autoFocus={undefined}
        blurOnSubmit={undefined}
        clear={undefined}
        clearButtonMode={undefined}
        clearTextOnFocus={undefined}
        dataDetectorTypes={undefined}
        defaultValue={undefined}
        editable={undefined}
        enablesReturnKeyAutomatically={undefined}
        inlineImageLeft={undefined}
        inlineImagePadding={undefined}
        isFocused={undefined}
        keyboardAppearance={undefined}
        keyboardType={undefined}
        maxLength={undefined}
        multiline={undefined}
        numberOfLines={undefined}
        onBlur={undefined}
        onChange={undefined}
        onChangeText={undefined}
        onContentSizeChange={undefined}
        onEndEditing={undefined}
        onFocus={undefined}
        onKeyPress={undefined}
        onLayout={undefined}
        onSelectionChange={undefined}
        onSubmitEditing={undefined}
        placeholder={undefined}
        placeholderTextColor="#86939e"
        returnKeyLabel={undefined}
        returnKeyType={undefined}
        secureTextEntry={undefined}
        selectTextOnFocus={undefined}
        selectionColor="#86939e"
        selectionState={undefined}
        style={
            Array [
                Object {
                  "backgroundColor": "#303337",
                  "borderRadius": 3,
                  "color": "#86939e",
                  "fontSize": 17.5,
                  "height": 30,
                  "margin": 8,
                  "overflow": "hidden",
                  "paddingLeft": 26,
                  "paddingRight": 19,
                },
                false,
                false,
                false,
                undefined,
              ]
        }
        underlineColorAndroid="transparent"
        value={undefined}
    />
    <Icon
        allowFontScaling={false}
        color="#86939e"
        name="search"
        size={16}
        style={
            Array [
                Object {
                  "backgroundColor": "transparent",
                  "left": 16,
                  "position": "absolute",
                  "top": 15.5,
                },
                undefined,
              ]
        }
    />
</View>,
  "nodes": Array [
    <View
      style={
            Array [
                  Object {
                    "backgroundColor": "#393e42",
                    "borderBottomColor": "#000",
                    "borderBottomWidth": 1,
                    "borderTopColor": "#000",
                    "borderTopWidth": 1,
                  },
                  false,
                  undefined,
                ]
      }
>
      <TextInput
            autoCapitalize={undefined}
            autoCorrect={undefined}
            autoFocus={undefined}
            blurOnSubmit={undefined}
            clear={undefined}
            clearButtonMode={undefined}
            clearTextOnFocus={undefined}
            dataDetectorTypes={undefined}
            defaultValue={undefined}
            editable={undefined}
            enablesReturnKeyAutomatically={undefined}
            inlineImageLeft={undefined}
            inlineImagePadding={undefined}
            isFocused={undefined}
            keyboardAppearance={undefined}
            keyboardType={undefined}
            maxLength={undefined}
            multiline={undefined}
            numberOfLines={undefined}
            onBlur={undefined}
            onChange={undefined}
            onChangeText={undefined}
            onContentSizeChange={undefined}
            onEndEditing={undefined}
            onFocus={undefined}
            onKeyPress={undefined}
            onLayout={undefined}
            onSelectionChange={undefined}
            onSubmitEditing={undefined}
            placeholder={undefined}
            placeholderTextColor="#86939e"
            returnKeyLabel={undefined}
            returnKeyType={undefined}
            secureTextEntry={undefined}
            selectTextOnFocus={undefined}
            selectionColor="#86939e"
            selectionState={undefined}
            style={
                  Array [
                        Object {
                          "backgroundColor": "#303337",
                          "borderRadius": 3,
                          "color": "#86939e",
                          "fontSize": 17.5,
                          "height": 30,
                          "margin": 8,
                          "overflow": "hidden",
                          "paddingLeft": 26,
                          "paddingRight": 19,
                        },
                        false,
                        false,
                        false,
                        undefined,
                      ]
            }
            underlineColorAndroid="transparent"
            value={undefined}
      />
      <Icon
            allowFontScaling={false}
            color="#86939e"
            name="search"
            size={16}
            style={
                  Array [
                        Object {
                          "backgroundColor": "transparent",
                          "left": 16,
                          "position": "absolute",
                          "top": 15.5,
                        },
                        undefined,
                      ]
            }
      />
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Search
        icon={Object {}}
        lightTheme={false}
        loadingIcon={Object {}}
        noIcon={false}
        placeholderTextColor="#86939e"
        round={false}
        showLoadingIcon={false}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Search {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "icon": Object {},
          "lightTheme": false,
          "loadingIcon": Object {},
          "noIcon": false,
          "placeholderTextColor": "#86939e",
          "round": false,
          "showLoadingIcon": false,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "#393e42",
                                "borderBottomColor": "#000",
                                "borderBottomWidth": 1,
                                "borderTopColor": "#000",
                                "borderTopWidth": 1,
                              },
                              false,
                              undefined,
                            ]
          }
>
          <TextInput
                    autoCapitalize={undefined}
                    autoCorrect={undefined}
                    autoFocus={undefined}
                    blurOnSubmit={undefined}
                    clear={undefined}
                    clearButtonMode={undefined}
                    clearTextOnFocus={undefined}
                    dataDetectorTypes={undefined}
                    defaultValue={undefined}
                    editable={undefined}
                    enablesReturnKeyAutomatically={undefined}
                    inlineImageLeft={undefined}
                    inlineImagePadding={undefined}
                    isFocused={undefined}
                    keyboardAppearance={undefined}
                    keyboardType={undefined}
                    maxLength={undefined}
                    multiline={undefined}
                    numberOfLines={undefined}
                    onBlur={undefined}
                    onChange={undefined}
                    onChangeText={undefined}
                    onContentSizeChange={undefined}
                    onEndEditing={undefined}
                    onFocus={undefined}
                    onKeyPress={undefined}
                    onLayout={undefined}
                    onSelectionChange={undefined}
                    onSubmitEditing={undefined}
                    placeholder={undefined}
                    placeholderTextColor="#86939e"
                    returnKeyLabel={undefined}
                    returnKeyType={undefined}
                    secureTextEntry={undefined}
                    selectTextOnFocus={undefined}
                    selectionColor="#86939e"
                    selectionState={undefined}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "#303337",
                                          "borderRadius": 3,
                                          "color": "#86939e",
                                          "fontSize": 17.5,
                                          "height": 30,
                                          "margin": 8,
                                          "overflow": "hidden",
                                          "paddingLeft": 26,
                                          "paddingRight": 19,
                                        },
                                        false,
                                        false,
                                        false,
                                        undefined,
                                      ]
                    }
                    underlineColorAndroid="transparent"
                    value={undefined}
          />
          <Icon
                    allowFontScaling={false}
                    color="#86939e"
                    name="search"
                    size={16}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "left": 16,
                                          "position": "absolute",
                                          "top": 15.5,
                                        },
                                        undefined,
                                      ]
                    }
          />
</View>,
        "_debugID": 2,
        "_renderedOutput": <View
          style={
                    Array [
                              Object {
                                "backgroundColor": "#393e42",
                                "borderBottomColor": "#000",
                                "borderBottomWidth": 1,
                                "borderTopColor": "#000",
                                "borderTopWidth": 1,
                              },
                              false,
                              undefined,
                            ]
          }
>
          <TextInput
                    autoCapitalize={undefined}
                    autoCorrect={undefined}
                    autoFocus={undefined}
                    blurOnSubmit={undefined}
                    clear={undefined}
                    clearButtonMode={undefined}
                    clearTextOnFocus={undefined}
                    dataDetectorTypes={undefined}
                    defaultValue={undefined}
                    editable={undefined}
                    enablesReturnKeyAutomatically={undefined}
                    inlineImageLeft={undefined}
                    inlineImagePadding={undefined}
                    isFocused={undefined}
                    keyboardAppearance={undefined}
                    keyboardType={undefined}
                    maxLength={undefined}
                    multiline={undefined}
                    numberOfLines={undefined}
                    onBlur={undefined}
                    onChange={undefined}
                    onChangeText={undefined}
                    onContentSizeChange={undefined}
                    onEndEditing={undefined}
                    onFocus={undefined}
                    onKeyPress={undefined}
                    onLayout={undefined}
                    onSelectionChange={undefined}
                    onSubmitEditing={undefined}
                    placeholder={undefined}
                    placeholderTextColor="#86939e"
                    returnKeyLabel={undefined}
                    returnKeyType={undefined}
                    secureTextEntry={undefined}
                    selectTextOnFocus={undefined}
                    selectionColor="#86939e"
                    selectionState={undefined}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "#303337",
                                          "borderRadius": 3,
                                          "color": "#86939e",
                                          "fontSize": 17.5,
                                          "height": 30,
                                          "margin": 8,
                                          "overflow": "hidden",
                                          "paddingLeft": 26,
                                          "paddingRight": 19,
                                        },
                                        false,
                                        false,
                                        false,
                                        undefined,
                                      ]
                    }
                    underlineColorAndroid="transparent"
                    value={undefined}
          />
          <Icon
                    allowFontScaling={false}
                    color="#86939e"
                    name="search"
                    size={16}
                    style={
                              Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "left": 16,
                                          "position": "absolute",
                                          "top": 15.5,
                                        },
                                        undefined,
                                      ]
                    }
          />
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Search
    icon={Object {}}
    lightTheme={false}
    loadingIcon={Object {}}
    noIcon={false}
    placeholderTextColor="#86939e"
    round={false}
    showLoadingIcon={false}
/>,
}
`;
